// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Products> should hide grid view in list view mode 1`] = `
<Products
  getProducts={[Function]}
  handleGetProducts={[Function]}
  products={Array []}
  totalProductCount={null}
  viewMode="list"
>
  <div>
    <div>
      <ProductList
        handleGetProducts={[Function]}
        products={Array []}
        totalProductCount={null}
      >
        <InfiniteContainer
          initialLimit={10}
          items={Array []}
          iterator={[Function]}
          limit={30}
          loader={[Function]}
          loadingIndicator={<LoadingIndicator />}
          preloadMultiplier={2}
          totalItems={null}
          wrapper={[Function]}
        >
          <div>
            <div>
              <List
                className="css-5bomak"
                itemScope={true}
                itemType="http://schema.org/ItemList"
              >
                <ul
                  className="css-gkw1j5 css-5bomak"
                  itemScope={true}
                  itemType="http://schema.org/ItemList"
                />
              </List>
            </div>
            <LoadingIndicator>
              <div
                className="css-1aid7je"
              >
                <IndicatorCircle
                  color="#5ccee3"
                  size={32}
                  strokeWidth={3}
                >
                  <svg
                    className="css-17zev8s"
                    height={32}
                    viewBox="25 25 50 50"
                    width={32}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      className="css-o43ryf"
                      cx="50"
                      cy="50"
                      r="20"
                    />
                  </svg>
                </IndicatorCircle>
              </div>
            </LoadingIndicator>
          </div>
        </InfiniteContainer>
      </ProductList>
    </div>
  </div>
</Products>
`;

exports[`<Products> should hide list view in grid view mode 1`] = `
<Products
  getProducts={[Function]}
  handleGetProducts={[Function]}
  products={Array []}
  totalProductCount={null}
  viewMode="grid"
>
  <div>
    <div>
      <ProductGrid
        handleGetProducts={[Function]}
        products={Array []}
        totalProductCount={null}
      >
        <InfiniteContainer
          initialLimit={6}
          items={Array []}
          iterator={[Function]}
          limit={30}
          loader={[Function]}
          loadingIndicator={<LoadingIndicator />}
          preloadMultiplier={2}
          totalItems={null}
          wrapper={[Function]}
        >
          <div>
            <div>
              <Grid
                className="css-1icypl2"
                component="ul"
                itemScope={true}
                itemType="http://schema.org/ItemList"
                wrap={true}
              >
                <ul
                  className="css-1icypl2 css-h7r55a css-u7q1iu"
                  itemScope={true}
                  itemType="http://schema.org/ItemList"
                />
              </Grid>
            </div>
            <LoadingIndicator>
              <div
                className="css-1aid7je"
              >
                <IndicatorCircle
                  color="#5ccee3"
                  size={32}
                  strokeWidth={3}
                >
                  <svg
                    className="css-17zev8s"
                    height={32}
                    viewBox="25 25 50 50"
                    width={32}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      className="css-o43ryf"
                      cx="50"
                      cy="50"
                      r="20"
                    />
                  </svg>
                </IndicatorCircle>
              </div>
            </LoadingIndicator>
          </div>
        </InfiniteContainer>
      </ProductGrid>
    </div>
  </div>
</Products>
`;
